add CORS mapping to MvcConfiguration.java